Fixed center alignment of location div, removed header color

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,6 @@ body {
 
 header {
   height: 120px;
-  background-color: #80251d;
   margin: 0;
   position: relative; }
 
@@ -58,7 +57,7 @@ header {
   margin-right: auto;
   background-color: #ffedbf;
   font-family: 'Yanone Kaffeesatz', sans-serif;
-  border: 2px solid black; }
+  border-top: 2px solid black; }
 
 .content::after {
   clear: both;
@@ -148,7 +147,7 @@ header {
   display: inline-block;
   margin-right: 10px; }
 
-.location {
+.locationContent {
   text-align: center; }
 
 .map {
